Closed
Bug 588407
Opened 15 years ago
Closed 15 years ago
Bug 130078 causes some fonts to be aliased
Categories
(Core :: Layout: Text and Fonts, defect)
Tracking
()
VERIFIED
FIXED
People
(Reporter: matjk7, Assigned: tnikkel)
References
()
Details
Attachments
(1 file)
|
1.43 KB,
patch
|
roc
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows NT 6.1; rv:2.0b5pre) Gecko/20100817 Minefield/4.0b5pre
Build Identifier:
See http://ftp.mozilla.org/pub/mozilla.org/firefox/nightly/latest-trunk/?C=M;O=D with a build from Bug 130078. Result: http://img841.imageshack.us/img841/8617/82319408.png (from https://bugzilla.mozilla.org/show_bug.cgi?id=130078#c132)
Reproducible: Always
| Assignee | ||
Comment 1•15 years ago
|
||
So I guess we are not getting an opaque surface to draw the text on?
Comment 2•15 years ago
|
||
That's my guess too. The rendering looks curiously like bug 363861.
Gabor: does the problem go away if you zoom?
Timothy, you probably need to be wrapping all toplevel content documents in a container layer if you aren't already (not just when zooming).
Comment 4•15 years ago
|
||
I don't know as I haven't tested it, I'm just basing my comments on the pictures.
| Assignee | ||
Comment 5•15 years ago
|
||
I had a patch for this sitting in my queue.
Let's try it and see if it fixes this issue.
Attachment #467309 -
Flags: review?(roc)
Attachment #467309 -
Flags: review?(roc) → review+
Comment 6•15 years ago
|
||
Perhaps we should note (e.g. in a comment) that this is a workaround for bug 363861 - or is a container layer also needed for something else?
It's not really a workaround. It's the right thing to do. It ensures that we don't fold Web content into the same layers as chrome, which is a good idea since the Web content is going to change a lot.
| Assignee | ||
Comment 8•15 years ago
|
||
Kurt, you reported this in bug 130078, comment 132. Can you try this try server build to see if the issue is fixed for you?
http://ftp.mozilla.org/pub/mozilla.org/firefox/tryserver-builds/tnikkel@gmail.com-2050d6216b77/
(In reply to comment #8)
> Kurt, you reported this in bug 130078, comment 132. Can you try this try server
> build to see if the issue is fixed for you?
>
> http://ftp.mozilla.org/pub/mozilla.org/firefox/tryserver-builds/tnikkel@gmail.com-2050d6216b77/
Looks great!
| Assignee | ||
Comment 10•15 years ago
|
||
Status: UNCONFIRMED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 11•15 years ago
|
||
The link to the try server build I posted above (2050d6216b77) was incorrect, it did not have 130078.
Please try one of these try server builds to see if the problem is resolved
http://ftp.mozilla.org/pub/mozilla.org/firefox/tryserver-builds/tnikkel@gmail.com-cf64eea45e07/
Comment 12•15 years ago
|
||
(In reply to comment #11)
> The link to the try server build I posted above (2050d6216b77) was incorrect,
> it did not have 130078.
>
> Please try one of these try server builds to see if the problem is resolved
> http://ftp.mozilla.org/pub/mozilla.org/firefox/tryserver-builds/tnikkel@gmail.com-cf64eea45e07/
Still aliased http://img825.imageshack.us/img825/9766/28229865.png
Status: RESOLVED → REOPENED
Ever confirmed: true
Resolution: FIXED → ---
| Assignee | ||
Comment 13•15 years ago
|
||
Do we need bug 574621 maybe? I haven't been included it in my try pushes because of the failures mentioned in that bug and it not fixing anything user visible that I know of.
Yes, I think we will.
Bug 579276 might fix this too.
I see this. Plain text files lack subpixel AA, because the ThebesLayer for the content is treated as transparent. I think it's simply bug 574621.
Depends on: 574621
| Assignee | ||
Comment 17•15 years ago
|
||
Bug 130078 landed and this issue should be fixed. The latest nightly can be used to test. If it is not fixed then please reopen.
Status: REOPENED → RESOLVED
Closed: 15 years ago → 15 years ago
Resolution: --- → FIXED
Comment 18•15 years ago
|
||
(In reply to comment #17)
> Bug 130078 landed and this issue should be fixed. The latest nightly can be
> used to test. If it is not fixed then please reopen.
Looks fine with Mozilla/5.0 (Windows NT 6.1; WOW64; rv:2.0b5pre) Gecko/20100827 Firefox/4.0b5pre
Mark verified if that is the nightly that should contain the patches you mentioned.
| Assignee | ||
Comment 19•15 years ago
|
||
2010-08-28 would be the first nightly with bug 130078.
Comment 20•15 years ago
|
||
Verifiying fixed
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:2.0b5pre) Gecko/20100829 Firefox/4.0b5pre
Status: RESOLVED → VERIFIED
Comment 21•15 years ago
|
||
Could bug 590864 be related to this one? Testing with Mozilla/5.0 (X11; Linux x86_64; rv:2.0b5pre) Gecko/20100830 Firefox/4.0b5pre seems to still have issues with font antialiasing.
| Assignee | ||
Updated•14 years ago
|
Assignee: nobody → tnikkel
You need to log in
before you can comment on or make changes to this bug.
Description
•