Bug 588407. Put top level content documents in a container layer. r=roc